--- a/src/views/Main/Main.module.css
+++ b/src/views/Main/Main.module.css
@@ -1,19 +1,3 @@
-.Map {
-  /* Make map fill only it's content width to show controlers */
-  height: 100%;
-  height: stretch;
-  width: 100%;
-  width: stretch;
-
-  min-width: 100px;
-  flex: 1;
-  position: absolute !important;
-
-  & .maplibregl-canvas {
-    width: 100% !important;
-  }
-}
-
 .clickThrough {
   pointer-events: none;
   & > * {
@@ -27,12 +11,28 @@
 .mainView {
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .mapWrap {
   display: flex;
   flex-flow: row nowrap;
-  z-index: 1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.Map {
+  /* Make map fill only it's content width to show controlers */
+  height: 100%;
+  width: 100%;
+
+  min-width: 100px;
+  flex: 1;
+
+  & .maplibregl-canvas {
+    width: 100% !important;
+  }
 }
 
 .footer {
@@ -60,7 +60,6 @@
 
 /* Mobile view */
 @media screen and (max-width: 960px) {
-
   .footer {
     position: relative;
     grid-column: 1/2;
